Bug 100365 - dynamic state leak
Summary: dynamic state leak
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: 13.0
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-24 00:34 UTC by Craig Stout
Modified: 2017-07-05 23:58 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
workaround or potential fix (4.43 KB, text/plain)
2017-03-24 00:34 UTC, Craig Stout
Details

Description Craig Stout 2017-03-24 00:34:27 UTC
Created attachment 130408 [details]
workaround or potential fix

We have a vulkan demo that is leaking dynamic state. This demo recently started using a compute shader.

I don't have a reduced test case, but check out the attached workaround/fix.

Mesa branch 13.0.3

anv_pool_state_emit, which is used only from this one location, requires a matching free.  Using the dynamic state stream instead prevents the leak because the stream is cleaned up on finish.
Comment 1 Jason Ekstrand 2017-03-24 01:13:27 UTC
Thanks!  I never noticed that one.  Please send to mesa-dev, drop the Change-id tag, and add

Cc: "13.0 17.0" <mesa-stable@lists.freedesktop.org>
Comment 2 Craig Stout 2017-03-24 17:20:33 UTC
Will do. What testing should I do before/after posting?
Comment 3 Jason Ekstrand 2017-03-24 17:43:31 UTC
(In reply to Craig Stout from comment #2)
> Will do. What testing should I do before/after posting?

Normally, I'd run the full Vulkan CTS on it.  We've got a fast CI system that can do that so just send it to the list and I'll kick off a CI job.
Comment 4 Jason Ekstrand 2017-03-24 17:43:50 UTC
Also, please add the following tag as well:

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100365
Comment 5 Craig Stout 2017-03-24 17:54:57 UTC
Looks like the code in question has changed in branch 17.  Is this still worth pushing for 13?
Comment 6 Jason Ekstrand 2017-03-24 19:06:26 UTC
That's a good question.  13 is about to go EOL but we might as well fix the bug.  Go ahead and send it.
Comment 7 Craig Stout 2017-03-29 15:49:24 UTC
Ok will do
Comment 8 Craig Stout 2017-04-05 19:21:08 UTC
Jason, cl has been emailed to mesa-dev and mesa-stable and I believe you reviewed it.
Let me know if there's any other action for me to take.
Comment 9 Jason Ekstrand 2017-04-05 19:54:27 UTC
(In reply to Craig Stout from comment #8)
> Let me know if there's any other action for me to take.

Just wait for it to show up in the next stable release and close the bug once it does.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.