Fix dynamic state leak.

anv_state_pool_alloc requires a matching free, whereas
anv_state_stream_alloc will be cleaned up on finish.

https://bugs.freedesktop.org/show_bug.cgi?id=100365

Change-Id: I28f068393defc76fce3f739940526e63a12d6ab9